<resources>
    <string name="app_name">fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="yellow">yelloe</string>
    <string name="yello">yellow</string>
    <string name="green">green</string>
    <string name="pink">pink</string>
    <string name="hello_rotaion_fragment">rotate</string>
    <string name="hello_picture_fragment">picture</string>
    <string name="hello_pet_fragment">pets</string>
</resources>